--- a/.env
+++ b/.env
@@ -8,4 +8,4 @@ VITE_GLOB_APP_TITLE = ETAOEmis
 VITE_GLOB_APP_SHORT_NAME = ETAOEmis
 
 # 生产环境 开启mock
-VITE_GLOB_PROD_MOCK = false
+VITE_GLOB_PROD_MOCK = true
