update：补充 esim 页面

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "etao-dianpi",
+    "name": "esim-frontend",
     "version": "1.0.0",
     "scripts": {
         "bootstrap": "pnpm install",
