--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "date-fns": "^3.6.0",
         "echarts": "^5.5.0",
         "element-resize-detector": "^1.2.4",
+        "file-saver": "^2.0.5",
         "lodash-es": "^4.17.21",
         "mitt": "^3.0.1",
         "mockjs": "^1.1.0",
@@ -40,11 +41,13 @@
         "vfonts": "^0.0.3",
         "vue": "^3.4.21",
         "vue-router": "^4.3.0",
-        "vue-types": "^4.2.1"
+        "vue-types": "^4.2.1",
+        "xlsx": "^0.18.5"
     },
     "devDependencies": {
         "@commitlint/cli": "^17.8.1",
         "@commitlint/config-conventional": "^17.8.1",
+        "@types/file-saver": "^2.0.7",
         "@types/lodash": "^4.17.0",
         "@types/lodash-es": "^4.17.12",
         "@types/node": "^18.19.31",
