--- a/.env.development
+++ b/.env.development
@@ -18,7 +18,7 @@ VITE_DROP_CONSOLE = true
 #VITE_PROXY=[["/api","https://naive-ui-admin"]]
 
 # API 接口地址
-VITE_GLOB_API_URL = http://esimgo.cn:32001
+VITE_GLOB_API_URL = https://esimgo.cn:32001
 
 # 图片上传地址
 VITE_GLOB_UPLOAD_URL=
